--- a/ASPAssignment1/ASPAssignment1/appsettings.json
+++ b/ASPAssignment1/ASPAssignment1/appsettings.json
@@ -8,6 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProductContext": "Server=(localdb)\\mssqllocaldb;Database=Products;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ProductContext": "Server=(localdb)\\mssqllocaldb;Database=Products;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "TechnicianContext": "Server=(localdb)\\mssqllocaldb;Database=Technicians;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "CustomerContext": "Server=(localdb)\\mssqllocaldb;Database=Customers;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IncidentContext": "Server=(localdb)\\mssqllocaldb;Database=Incidents;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
